--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <div class="dropdown-divider"></div>
         </div>
         <div class="row">
-          <div class="col-lg-4"></div>
-        <div class="col-lg-8 pt-1">
+          <div class="col-lg-4 pl-5"></div>
+        <div class="col-lg-8 pt-1 pl-5">
           <h5>Saya adalah mahasiswa Sistem Informasi ITS, lahir di Sidoarjo tanggal 7 Januari 1999. Saya merupakan orang yang aktif dan selalu semangat untuk belajar bersama</h5>
         </div>
       </div>
@@ -131,8 +131,8 @@
       <div class="row">
         <div class="col-lg-4 pl-5 pt-1"><img src="phone.jpeg" alt="..." class="img-thumbnail w-25"></div>
         <div class="col-lg-8">
-          <div class="d-inline-block p-2" style=" margin: 10px;" >Instagram : @fazarashif</div>
-          <div class="d-inline-block p-2" style=" margin: 10px;" >Twitter : @fazarashif</div>
+          <div class="d-inline-block p-2 m-1" >Instagram : @fazarashif</div>
+          <div class="d-inline-block p-2 m-1"  >Twitter : @fazarashif</div>
         </div>
       </div>
       <div class="row">
